--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,8 @@
 name: tree_iterator
-description: Provides simple operations for traversing a tree.
-  Works with any tree structure providing that you can return the set of children for a node when requested.
 version: 1.0.0
 homepage: https://github.com/bsutton/tree_iterator
-
-environment:
+description: Provides simple operations for traversing a tree. Works with any tree structure providing that you can return the set of children for a node when requested.
+environment: 
   sdk: '>=2.8.1 <3.0.0'
-
-#dependencies:
-#  path: ^1.7.0
-
-dev_dependencies:
+dev_dependencies: 
   pedantic: ^1.9.0
