--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,6 +1,6 @@
 
 #include: package:effective_dart/analysis_options.yaml
-include: package:pedantic/analysis_options.yaml
+include: package:lint_hard/all.yaml
 
 # For lint rules and documentation, see http://dart-lang.github.io/linter/lints.
 # Uncomment to specify additional rules.
@@ -10,14 +10,6 @@ linter:
     lines_longer_than_80_chars: false
     camel_case_types: true
     always_declare_return_types: true
-    
     await_only_futures: true
   
-
-analyzer:
-  
-  exclude: lib/templates/*.dart
-  strong-mode:
-    implicit-casts: false
-    implicit-dynamic: false
     
